# ARN_PW3

./: .gitignore  notebook.ipynb  notebook.ipynb.bak  pyproject.toml  readme.md  report.typ
.ipynb_checkpoints/: notebook-checkpoint.ipynb
thesis/0.1.0/: thesis.typ  typst.toml
