[project]
name = "PW3"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
  "ipympl>=0.10.0",
  "ipywidgets>=8.1.8",
  "keras>=3.13.2",
  "tensorflow[and-cuda]>=2.20.0",
  "tqdm>=4.67.3",
]

[dependency-groups]
dev = [
  "ipykernel>=7.2.0",
  "matplotlib>=3.10.8",
  "numpy>=2.4.2",
  "pandas>=3.0.1",
  "scikit-learn>=1.8.0",
  "seaborn>=0.13.2",
]
